--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.2",
+    "fetch": "^1.1.0",
     "react": "18.1.0",
     "react-icons": "^4.7.1",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "zingmp3-api-full": "^1.0.14",
+    "zingmp3-api-next": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
